# aiedu

./: .gitignore  README.md  pyproject.toml  requirements
notebooks/: eda.ipynb
