[project]
name = "aiedu"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pandas-stubs==3.0.0.260204",
    "polars>=1.38.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
